# python-template

./: .gitignore  LICENSE  Makefile  pyproject.toml
src/pkg_name/: main.py
