[project]
name = "html2md"
version = "0.1.0"
description = "Template Package for Python projects"
readme = "README.md"
authors = [{ name = "en-ver" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
html2md = "main:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
